Removed add opens, because we want JDK 21 compatibility of dependencies